--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -90,6 +90,13 @@ margin: 0;
     position: absolute;
     right: 60px;
     top: 12px;
+    z-index: 6666;
+}
+
+.force-item .action a {
+    padding: 5px 10px;
+    font-size: 17px;
+    cursor: pointer;
 }
 
 .force-item b {
